syntax = "proto3";
package nibiru.gastoken.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/gastoken/types";

// FeeToken is a struct that specifies a token that can be used as a transaction fee asset in the Nibiru network.
message FeeToken {
  option (gogoproto.equal) = true;

  string name = 1 [ (gogoproto.moretags) = "yaml:\"name\"" ];

  string erc20_address = 2 [ (gogoproto.moretags) = "yaml:\"erc20_address\"" ];
}